--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "axios": "^1.13.3",
+    "cors": "^2.8.6",
+    "express": "^5.2.1",
     "firebase": "^12.9.0",
     "json-server": "^1.0.0-beta.5",
+    "multer": "^2.0.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
