--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "express": "^5.2.1",
     "firebase": "^12.9.0",
     "json-server": "^1.0.0-beta.5",
+    "leaflet": "^1.9.4",
     "multer": "^2.0.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.17.0",
@@ -54,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.21"
   }
 }
