--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^12.9.0",
     "json-server": "^1.0.0-beta.5",
     "leaflet": "^1.9.4",
+    "leaflet-rotatedmarker": "^0.2.0",
     "multer": "^2.0.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
